--- a/internet_shop/styles/compiled/style.css
+++ b/internet_shop/styles/compiled/style.css
@@ -1,8 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-}
-
 .navigation {
   display: grid;
   grid-template-areas: "nav nav nav";
@@ -16,6 +11,8 @@
 .navigation li {
   text-align: center;
   justify-content: space-around;
+  font-size: 2rem;
+  height: 100%;
 }
 
 .navigation li:first-child {
@@ -28,11 +25,14 @@
 
 .navigation li:hover > ul {
   display: block;
+  position: absolute;
+  z-index: 1;
   background-color: #222;
   border: solid 3px #fff;
   border-top: 0;
   border-radius: 0 0 8px 8px;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
 }
 
 .navigation li a {
@@ -43,7 +43,7 @@
   color: #fff;
 }
 
-.navigation li li a:hover {
+.navigation li a:hover {
   background-color: #000;
 }
 
@@ -60,4 +60,9 @@
 
 .navigation ul li:last-child a:hover {
   border-radius: 0 0 5px 5px;
+}
+
+* {
+  padding: 0;
+  margin: 0;
 }
