--- a/internet_shop/styles/compiled/style.css
+++ b/internet_shop/styles/compiled/style.css
@@ -1,18 +1,19 @@
 .navigation {
   display: grid;
-  grid-template-areas: "nav nav nav";
+  grid-auto-flow: column dense;
   list-style: none;
   background-color: #3a3a3a;
   border-top: solid 3px #fff;
   border-bottom: solid 3px #fff;
   box-shadow: 0 -2px 3px -1px black;
+  color: #fff;
 }
 
 .navigation li {
+  justify-content: center;
   text-align: center;
-  justify-content: space-around;
   font-size: 2rem;
-  height: 100%;
+  height: 4rem;
 }
 
 .navigation li:first-child {
@@ -36,15 +37,9 @@
 }
 
 .navigation li a {
-  display: block;
-  padding: 0 20px;
   text-decoration: none;
-  line-height: 40px;
-  color: #fff;
-}
-
-.navigation li a:hover {
-  background-color: #000;
+  color: inherit;
+  height: 100%;
 }
 
 .navigation ul {
