--- a/internet_shop/styles/sass/header/_nav.sass
+++ b/internet_shop/styles/sass/header/_nav.sass
@@ -1,16 +1,17 @@
 .navigation
   display: grid
-  grid-template-areas: "nav nav nav"
+  grid-auto-flow: column dense
   list-style: none
   background-color: rgb(58, 58, 58)
   border-top: solid 3px #fff
   border-bottom: solid 3px #fff
-  box-shadow: 0px -2px 3px -1px rgba(0, 0, 0, 1)
+  box-shadow: 0 -2px 3px -1px rgba(0, 0, 0, 1)
+  color: #fff
   li
+    justify-content: center
     text-align: center
-    justify-content: space-around
     font-size: 2rem
-    height: 100%
+    height: 4rem
     &:first-child
       border-radius: 5px 0 0 5px
     &:hover
@@ -26,13 +27,9 @@
         box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25)
         box-sizing: border-box
     a
-      display: block
-      padding: 0 20px
       text-decoration: none
-      line-height: 40px
-      color: #fff
-      &:hover
-        background-color: #000
+      color: inherit
+      height: 100%
 
   ul
     display: none
