--- a/internet_shop/public/styles/sass/header/_nav.sass
+++ b/internet_shop/public/styles/sass/header/_nav.sass
@@ -3,25 +3,24 @@
   grid-auto-flow: column dense
   list-style: none
   background-color: rgb(58, 58, 58)
-  border-top: solid 3px #fff
-  border-bottom: solid 3px #fff
+  border-top: solid 3px rgb(255, 255, 255)
+  border-bottom: solid 3px rgb(255, 255, 255)
   box-shadow: 0 -2px 3px -1px rgba(0, 0, 0, 1)
-  color: #fff
+  color: rgb(255, 255, 255)
   li
     justify-content: center
     text-align: center
     font-size: 2rem
     height: 4rem
-    &:first-child
-      border-radius: 5px 0 0 5px
     &:hover
-      background-color: #222
+      background-color: rgb(34, 34, 34)
       > ul
-        display: block
+        display: grid
+        grid-auto-flow: column dense
         position: absolute
         z-index: 1
-        background-color: #222
-        border: solid 3px #fff
+        background-color: rgb(58, 58, 58)
+        border: solid 3px rgb(255, 255, 255)
         border-top: 0
         border-radius: 0 0 8px 8px
         box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25)
