--- a/internet_shop/public/styles/sass/header/_nav.sass
+++ b/internet_shop/public/styles/sass/header/_nav.sass
@@ -36,6 +36,7 @@
     margin-left: -3px
     overflow: hidden
     li
+      margin: .5em
       &:last-child
         a
           border-radius: 0 0 5px 5px
