--- a/internet_shop/public/styles/sass/galery/_slider.sass
+++ b/internet_shop/public/styles/sass/galery/_slider.sass
@@ -1,10 +1,7 @@
 .gallery
-  width: 500px
-  position: relative
-  margin: 0 auto
-
-.gallery_image
-  width: 100%
+  display: flex
+  flex-direction: column
+  align-items: center
 
 .button-group
   display: flex
