--- a/internet_shop/templates/single_product.phtml
+++ b/internet_shop/templates/single_product.phtml
@@ -9,9 +9,11 @@
     <title><?=$name;?></title>
 </head>
 <body>
-<h1><?=$name;?></h1>
-<img src="<?=$path;?>" alt="Image">
-<p>Описание товара: <?=$description;?></p>
-<p>Число просмотров: <?=$views;?></p>
+<div class="single_product">
+    <h1><?=$name;?></h1>
+    <img src="<?=$path;?>" alt="Image">
+    <p>Описание товара: <?=$description;?></p>
+    <p>Число просмотров: <?=$views;?></p>
+</div>
 </body>
 </html>
